# ai-usage-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aggregate.rs  config.rs  lib.rs  main.rs  model.rs  pricing.rs  tokens.rs  ui.rs
src/providers/: codex.rs  minimax.rs  mod.rs  zai.rs
tests/: ui_render.rs  ui_snap.rs
